# mace

./: .gitignore  LICENSE  configure.ac
etc/: testBranch.sh
src/: Makefile.am  bishop.cpp  bishop.h  board.cpp  board.h  boardSquare.cpp  boardSquare.h  castlingRights.hpp  chessBoard.cpp  chessBoard.h  colour.hpp  direction.hpp  evaluate.cpp  evaluate.h  king.cpp  king.h  knight.cpp  knight.h  locus.cpp  locus.h  mace.cpp  main.cpp  mcts.cpp  mcts.h  move.hpp  moveGen.cpp  moveGen.h  moveStack.hpp  movementTypes.hpp  mover.hpp  pawn.cpp  pawn.h  perft-splitter.cpp  piece.cpp  piece.h  pieceType.hpp  queen.cpp  queen.h  rook.cpp  rook.h  (+10 more)
src/moveTypes/: diagonal.hpp  knight.hpp  orthodiagonal.hpp  orthogonal.hpp
testsuite/: Makefile.am  perft-tester.cpp  piececounts.cpp  position2.perft  position3.perft  position4.perft  position5.perft  position6.perft  starting-position.perft  zobrist-tester.cpp
